Cast collection view finished. Fix scroll view.

--- a/movie-app/Modules/Actor-Details/PersonDetailsStoryboard.storyboard
+++ b/movie-app/Modules/Actor-Details/PersonDetailsStoryboard.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Actor Details View Controller-->
+        <!--Person Details View Controller-->
         <scene sceneID="QYb-2T-Ugg">
             <objects>
-                <viewController id="yjs-n2-hg5" customClass="ActorDetailsViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="yjs-n2-hg5" customClass="PersonDetailsViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UVt-OH-AnP">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
