--- a/movie-app/Modules/Actor-Details/cells/PersonCollectionViewCell.xib
+++ b/movie-app/Modules/Actor-Details/cells/PersonCollectionViewCell.xib
@@ -3,7 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,26 +11,26 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PersonCollectionViewCell" id="gTV-IL-0wX" customClass="PersonCollectionViewCell" customModule="Movies" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="128" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="128" height="220"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="128" height="200"/>
+                <rect key="frame" x="0.0" y="0.0" width="128" height="220"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bbp-Jh-N7F">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bbp-Jh-N7F">
                         <rect key="frame" x="0.0" y="1.5" width="128" height="157"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="160" id="7hD-V6-tR2"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Character" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UCq-Cg-cKy">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Character" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UCq-Cg-cKy">
                         <rect key="frame" x="0.0" y="183" width="128" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zGN-TB-etY">
-                        <rect key="frame" x="0.0" y="163" width="128" height="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zGN-TB-etY">
+                        <rect key="frame" x="0.0" y="163" width="39.5" height="17"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -39,14 +39,13 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="UCq-Cg-cKy" secondAttribute="trailing" id="5hL-J8-E7J"/>
                 <constraint firstItem="bbp-Jh-N7F" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="JAm-hV-lR4"/>
-                <constraint firstAttribute="bottom" secondItem="UCq-Cg-cKy" secondAttribute="bottom" id="KnV-Sj-Zkj"/>
+                <constraint firstItem="UCq-Cg-cKy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="LyV-qk-ZLO"/>
+                <constraint firstAttribute="trailing" secondItem="UCq-Cg-cKy" secondAttribute="trailing" id="P8e-6F-WJo"/>
                 <constraint firstAttribute="trailing" secondItem="bbp-Jh-N7F" secondAttribute="trailing" id="Pw1-LQ-Aah"/>
-                <constraint firstItem="UCq-Cg-cKy" firstAttribute="top" secondItem="zGN-TB-etY" secondAttribute="bottom" constant="3" id="eqi-9e-lvO"/>
-                <constraint firstItem="zGN-TB-etY" firstAttribute="leading" secondItem="UCq-Cg-cKy" secondAttribute="leading" id="hA3-Hg-Xze"/>
-                <constraint firstItem="zGN-TB-etY" firstAttribute="trailing" secondItem="UCq-Cg-cKy" secondAttribute="trailing" id="jaY-me-XGE"/>
-                <constraint firstItem="UCq-Cg-cKy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="jxz-BN-p5l"/>
+                <constraint firstItem="UCq-Cg-cKy" firstAttribute="top" secondItem="zGN-TB-etY" secondAttribute="bottom" constant="3" id="Ueh-0b-xEG"/>
+                <constraint firstItem="zGN-TB-etY" firstAttribute="top" secondItem="bbp-Jh-N7F" secondAttribute="bottom" constant="3" id="Xor-oY-FE7"/>
+                <constraint firstItem="zGN-TB-etY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="reb-YF-IBo"/>
                 <constraint firstItem="bbp-Jh-N7F" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="zh4-wc-8E4"/>
             </constraints>
             <connections>
