activity indicators added.

--- a/movie-app/Modules/Movie-Details/MovieDetailsStoryboard.storyboard
+++ b/movie-app/Modules/Movie-Details/MovieDetailsStoryboard.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S2B-jH-f4z">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1227"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1145"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gcm-ZW-TnQ">
                                                 <rect key="frame" x="20" y="0.0" width="150" height="250"/>
@@ -76,7 +76,7 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q1S-44-Xtp">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q1S-44-Xtp">
                                                         <rect key="frame" x="118" y="40" width="125" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                         <nil key="textColor"/>
@@ -192,7 +192,7 @@
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="S2B-jH-f4z" firstAttribute="height" secondItem="Dom-cw-rys" secondAttribute="height" multiplier="1.5" priority="250" id="Jit-5u-TPV"/>
+                                    <constraint firstItem="S2B-jH-f4z" firstAttribute="height" secondItem="Dom-cw-rys" secondAttribute="height" multiplier="1.4" priority="250" id="Jit-5u-TPV"/>
                                     <constraint firstAttribute="height" constant="818" id="Vbs-H4-I66"/>
                                     <constraint firstItem="S2B-jH-f4z" firstAttribute="leading" secondItem="Dom-cw-rys" secondAttribute="leading" id="bQ8-U8-YrZ"/>
                                     <constraint firstItem="S2B-jH-f4z" firstAttribute="top" secondItem="Dom-cw-rys" secondAttribute="top" id="uVa-CB-chb"/>
@@ -214,7 +214,6 @@
                     <navigationItem key="navigationItem" title="Details" largeTitleDisplayMode="always" id="Bue-6R-pU5">
                         <barButtonItem key="backBarButtonItem" title="Movies" id="odN-v3-ggD"/>
                     </navigationItem>
-                    <size key="freeformSize" width="414" height="896"/>
                     <connections>
                         <outlet property="castCollectionView" destination="vIS-SU-zrY" id="v63-MU-zEa"/>
                         <outlet property="crewCollectionView" destination="JlR-FY-o9b" id="Ys2-Wl-Bnq"/>
