--- a/movie-app/Modules/Seasons/cells/SeasonItemCollectionViewCell.xib
+++ b/movie-app/Modules/Seasons/cells/SeasonItemCollectionViewCell.xib
@@ -11,33 +11,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="SeasonItemCollectionViewCell" customModule="Movies" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="128" height="220"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SeasonItemCollectionViewCell" id="gTV-IL-0wX" customClass="SeasonItemCollectionViewCell" customModule="Movies" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="128" height="230"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="128" height="220"/>
+                <rect key="frame" x="0.0" y="0.0" width="128" height="230"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="doc.richtext" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="8rb-SU-d6o">
-                        <rect key="frame" x="0.0" y="0.0" width="128" height="160"/>
+                        <rect key="frame" x="0.0" y="0.0" width="128" height="180"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="160" id="6fj-ul-LNH"/>
+                            <constraint firstAttribute="height" constant="180" id="6fj-ul-LNH"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Season #" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rfP-ln-1Wc">
-                        <rect key="frame" x="0.0" y="163" width="62.5" height="17"/>
+                        <rect key="frame" x="0.0" y="183" width="62.5" height="17"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Mq-MT-Vri">
-                        <rect key="frame" x="0.0" y="180" width="38" height="17"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="# Episodes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0FU-gW-hll">
-                        <rect key="frame" x="0.0" y="197" width="71.5" height="17"/>
+                        <rect key="frame" x="0.0" y="203" width="71.5" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" systemColor="secondaryLabelColor"/>
                         <nil key="highlightedColor"/>
@@ -46,20 +40,17 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="0FU-gW-hll" firstAttribute="top" secondItem="6Mq-MT-Vri" secondAttribute="bottom" id="5GZ-sA-bzg"/>
-                <constraint firstItem="6Mq-MT-Vri" firstAttribute="top" secondItem="rfP-ln-1Wc" secondAttribute="bottom" id="6RI-wR-YJf"/>
+                <constraint firstItem="0FU-gW-hll" firstAttribute="top" secondItem="rfP-ln-1Wc" secondAttribute="bottom" constant="3" id="5hx-0g-itA"/>
                 <constraint firstAttribute="trailing" secondItem="8rb-SU-d6o" secondAttribute="trailing" id="7HT-Eb-ezn"/>
                 <constraint firstItem="8rb-SU-d6o" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="CLR-x0-wuN"/>
-                <constraint firstItem="6Mq-MT-Vri" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="FYc-HZ-aur"/>
+                <constraint firstItem="0FU-gW-hll" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="PhL-Ci-C8M"/>
                 <constraint firstItem="8rb-SU-d6o" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="XKj-xL-rxd"/>
                 <constraint firstItem="rfP-ln-1Wc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="boG-lb-OFU"/>
                 <constraint firstItem="rfP-ln-1Wc" firstAttribute="top" secondItem="8rb-SU-d6o" secondAttribute="bottom" constant="3" id="n4y-Li-NDB"/>
-                <constraint firstItem="0FU-gW-hll" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="oks-sV-Ul9"/>
             </constraints>
             <connections>
                 <outlet property="episodesNumberLabel" destination="0FU-gW-hll" id="dGh-La-VT0"/>
                 <outlet property="posterImageView" destination="8rb-SU-d6o" id="P8g-8N-Ltg"/>
-                <outlet property="seasonNameLabel" destination="6Mq-MT-Vri" id="Oce-vq-gxG"/>
                 <outlet property="seasonNumberLabel" destination="rfP-ln-1Wc" id="U9b-gj-NAE"/>
             </connections>
             <point key="canvasLocation" x="64" y="80"/>
