--- a/movie-app/Modules/Serie-Details/SerieDetailsStoryboard.storyboard
+++ b/movie-app/Modules/Serie-Details/SerieDetailsStoryboard.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FmD-bO-qSQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1472.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1636"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7ff-r3-0c4">
                                                 <rect key="frame" x="20" y="0.0" width="150" height="250"/>
@@ -125,13 +125,13 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="896-Im-6ej">
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="redraw" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="896-Im-6ej">
                                                 <rect key="frame" x="20" y="669" width="374" height="230"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="230" id="xcu-db-yFq"/>
                                                 </constraints>
-                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Haa-rr-7uV">
+                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Haa-rr-7uV">
                                                     <size key="itemSize" width="128" height="230"/>
                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -145,13 +145,13 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dvh-Ld-j6C">
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="redraw" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dvh-Ld-j6C">
                                                 <rect key="frame" x="20" y="953" width="374" height="230"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="230" id="PYo-Qc-l5c"/>
                                                 </constraints>
-                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yq2-tH-tTm">
+                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yq2-tH-tTm">
                                                     <size key="itemSize" width="128" height="230"/>
                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -165,13 +165,13 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Kbb-Eb-Efi">
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="redraw" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Kbb-Eb-Efi">
                                                 <rect key="frame" x="20" y="1237" width="374" height="230"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="230" id="Q37-jh-8bN"/>
                                                 </constraints>
-                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6PF-m5-iwY">
+                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6PF-m5-iwY">
                                                     <size key="itemSize" width="128" height="230"/>
                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -222,7 +222,7 @@
                                     <constraint firstItem="FmD-bO-qSQ" firstAttribute="width" secondItem="5Dr-4c-weA" secondAttribute="width" id="64i-CQ-Pti"/>
                                     <constraint firstAttribute="trailing" secondItem="FmD-bO-qSQ" secondAttribute="trailing" id="Mmq-92-7jR"/>
                                     <constraint firstAttribute="bottom" secondItem="FmD-bO-qSQ" secondAttribute="bottom" id="acd-gs-WRR"/>
-                                    <constraint firstItem="FmD-bO-qSQ" firstAttribute="height" secondItem="5Dr-4c-weA" secondAttribute="height" multiplier="1.8" priority="250" id="kas-aS-cdA"/>
+                                    <constraint firstItem="FmD-bO-qSQ" firstAttribute="height" secondItem="5Dr-4c-weA" secondAttribute="height" multiplier="2" priority="250" id="kas-aS-cdA"/>
                                     <constraint firstItem="FmD-bO-qSQ" firstAttribute="top" secondItem="5Dr-4c-weA" secondAttribute="top" id="x4d-Y5-qvI"/>
                                 </constraints>
                             </scrollView>
